--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,7 +1,16 @@
 .projects-container{
-    display: grid;
+  display: grid;
   grid-template-columns: repeat(2,1fr);
   gap: 50px; 
   width: 80%;
-  margin: 30px auto; /* Centraliza horizontalmente */
+  margin: 30px auto;
+}
+
+@media (max-width: 1350px) {
+    
+  .projects-container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
 }
