--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -42,3 +42,89 @@ address p{
 address img{
     width: 60px;
 }
+
+@media (max-width: 1750px) {
+
+    header{
+        gap: 15%;
+    }
+    
+    header a{
+        font-size: 1.05rem;
+    }
+
+    header img{
+        width: 75px;
+    }
+
+    address img{
+        width: 50px;
+    }
+
+    address p{
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 1350px) {
+
+    header{
+        gap: 10%;
+    }
+
+    header a{
+        margin-left: 15px;
+    }
+
+    header img{
+        width: 70px;
+    }
+
+    address img{
+        width: 50px;
+    }
+}
+
+@media (max-width: 920px){
+
+    header{
+        gap: 7%;
+    }
+
+    header a{
+        font-size: 0.9rem;
+    }
+
+    header img{
+        width: 60px;
+    }
+
+    address{
+        margin-right: 10px;
+        gap: 20px;
+    }
+
+    address img{
+        width: 40px;
+    }
+
+    address p{
+        font-size: 0.85rem;
+        gap: 2px;
+    }
+}
+
+@media (max-width: 700px){
+
+    header a{
+        font-size: 0.8rem;
+    }
+    
+    header img{
+        width: 50px;
+    }
+
+    address{
+        flex-direction: column;
+    }
+}
