Adding Responsivity Part 1

--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -1,25 +1,29 @@
 .container-info{
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 25px;
-    margin-top: 100px;
-    margin-left: 10%;
+    margin-top: 160px;
+    margin-left: 5%;
 }
 
 .my-foto {
+    display: flex;
+    justify-content: center;
     position: relative;
     overflow: hidden;
     width: 350px;
     height: 350px;
 }
   
-  #animated-foto {
-    width: 100%;
-    height: 100%;
+#animated-foto {
+    width: 90%;
+    height: 90%;
     object-fit: cover;
     border-radius: 50%;
+    border: 3px solid red;
     position: absolute;
-    animation: subirDescer 4s ease-in-out infinite;
+    animation: subirDescer 4.5s ease-in-out infinite;
 }
   
 
@@ -28,7 +32,7 @@
         transform: translateY(0px);
     }
     50%{
-        transform: translateY(-10px);
+        transform: translateY(-7px);
     }
     100%{
         transform: translateY(0px);
@@ -50,7 +54,7 @@
 
 .personal-info h3{
     display: flex;
-    gap: 7px;
+    gap: 5px;
 }
 
 #special-word{
@@ -61,13 +65,111 @@
     color: white;
 }
 
-nav{
+.container-personal-icons{
     display: flex;
-    gap: 50px;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
 }
 
-nav a i{
+.container-personal-icons a i{
     border: 1px solid;
     padding: 12px;
     border-radius: 50%;
+    margin-left: 30px;
+    color: white;
+}
+
+
+@media (max-width:1000px){
+
+    .container-info{
+        gap: 0;
+    }
+
+    .my-foto{
+        width: 320px;
+        height: 320px;
+    }
+
+    #animated-foto{
+        width: 80%;
+        height: 80%;
+    }
+
+    .my-info{
+        width: 70%;
+        margin-right: 20px;
+    }
+}
+
+@media (max-width:820px){
+
+    .container-info{
+        flex-direction: column;
+    }
+
+}
+
+@media (max-width:760px){
+
+    .personal-info h3{
+        font-size: 1rem;
+    }
+}
+
+@media (max-width:730px){
+
+    .my-foto{
+        width: 260px;
+        height: 260px;
+    }
+
+    .my-info{
+        width: 80%;
+    }
+
+    .personal-info p{
+        font-size: 0.9rem;
+    }
+
+    .container-personal-icons h4{
+        font-size: 0.9rem;
+    }
+
+    .container-personal-icons a i{
+        padding: 9px;
+        margin-left: 10px;
+    }
+}
+
+@media (max-width:520px){
+
+    .container-info{
+        margin-top: 80px;
+    }
+
+    .my-info{
+        width: 100%;
+    }
+}
+
+@media (max-width:400px){
+
+    .personal-info h3{
+        font-size: 0.85rem;
+    }
+
+    .personal-info p{
+        font-size: 0.8rem;
+    }
+
+    .container-personal-icons h4{
+        font-size: 0.8rem;
+    }
+
+    .my-foto{
+        width: 230px;
+        height: 230px;
+    }
 }
