--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,14 +1,15 @@
 header{
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 header .container-name{
-    width: 20%;
+    width: 30%;
+    margin-left: 10%;
 }
 
-header nav{
+header .container-links{
     display: flex;
     justify-content: center;
     width: 70%;
@@ -21,6 +22,43 @@ a:hover{
     transition: transform 0.3s ease;
 }
 
-.icons a i{
-    color: blue;
+
+@media (max-width:820px){
+
+    .container-name h3{
+        font-size: 1rem;
+    }
+}
+
+@media (max-width:720px){
+
+    header .container-name{
+        width: 40%;
+        margin-left: 5%;
+    }
+
+    .container-name h3{
+        font-size: 0.85rem;
+    }
+
+    header .container-links{
+        width: 60%;
+        gap: 7%;
+        font-size: 0.9rem;
+    }
+}
+
+@media (max-width:470px){
+
+    header .container-name{
+        width: 35%;
+    }
+
+    .container-name h3{
+        font-size: 0.75rem;
+    }
+
+    header .container-links a{
+        font-size: 0.8rem;
+    }
 }
