--- a/src/css/Skills.css
+++ b/src/css/Skills.css
@@ -1,6 +1,51 @@
+.main-container-2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 90px;
+    gap: 50px;
+}
+
+.main-container-2 h2{
+    font-size: 1.2rem;
+}
+
+.main-container-2 button{
+    font-size: 1rem;
+}
+
+.main-container-2 button:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: transform 0.2s ease;
+}
+
 .container-images{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    gap: 20px;
-    margin-top: 30px;
+    gap: 15px;
+    margin-top: 50px;
+}
+
+
+@media (max-width:1000px){
+
+    .main-container-2 h2{
+        font-size: 1.1rem;
+    }
+
+    .container-skills h3{
+        font-size: 1rem;
+    }
+}
+
+@media (max-width:750px){
+
+    .main-container-2{
+        width: 80%;
+    }
+
+    .main-container-2 button{
+        font-size: 0.85rem;
+    }
 }
