--- a/src/css/Contacts.css
+++ b/src/css/Contacts.css
@@ -1,15 +1,19 @@
+.main-container{
+    margin-top: 120px;
+}
+
 .contact-form {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     max-width: 500px;
-    margin: 30px auto ;
+    margin: 60px auto ;
 }
 
 .contact-form input, .contact-form textarea {
     width: 100%;
     padding: 0.8rem;
-    border-radius: 8px;
+    border-radius: 10px;
     border: 1px solid #ccc;
     color: white;
     resize: none;
@@ -27,4 +31,51 @@
 
 .contact-form button:hover {
     background-color: #45a049;
+}
+
+
+@media (max-width:600px){
+    .main-container h3{
+        font-size: 1rem;
+    }
+
+    .main-container h2{
+        font-size: 1.2rem;
+    }
+
+    .contact-form{
+        max-width: 420px;
+    }
+
+    .contact-form label{
+        font-size: 0.9rem;
+    }
+}
+
+@media (max-width:470px){
+    .main-container{
+        margin-top: 100px;
+    }
+
+    .main-container h3{
+        font-size: 0.8rem;
+    }
+
+    .main-container h2{
+        font-size: 1.1rem;
+    }
+
+    .contact-form{
+        max-width: 320px;
+    }
+
+    .contact-form textarea{
+        height: 130px;
+    }
+
+    .contact-form button{
+        font-weight: bold;
+        font-size: 0.8rem;
+        padding: 0.5rem;
+    }
 }
