--- a/src/css/Skills.css
+++ b/src/css/Skills.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 90px;
+    margin-top: 100px;
     gap: 50px;
 }
 
 .main-container-2 h2{
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 
 .main-container-2 button{
@@ -20,32 +20,48 @@
     transition: transform 0.2s ease;
 }
 
+.container-skills{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
 .container-images{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(4,1fr);
     gap: 15px;
     margin-top: 50px;
 }
 
 
 @media (max-width:1000px){
-
-    .main-container-2 h2{
-        font-size: 1.1rem;
+    .main-container-2 h3{
+        font-size: 0.9rem;
     }
 
-    .container-skills h3{
+    .container-skills h2{
         font-size: 1rem;
     }
 }
 
-@media (max-width:750px){
-
+@media (max-width:780px){
     .main-container-2{
-        width: 80%;
+        width: 82%;
+        margin-left: 9%;
+    }
+}
+
+@media (max-width:620px){
+    .main-container-2 h3{
+        font-size: 0.75rem;
     }
 
-    .main-container-2 button{
-        font-size: 0.85rem;
+    .container-skills h2{
+        font-size: 0.9rem;
+    }
+
+    .container-images img{
+        width: 50%;
     }
 }
